--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "use-react-countries": "^1.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
